--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -84,10 +84,11 @@ input {
   line-height: 44px;
 }
 
-.gram-actions a {
+.gram-actions {
   font-weight: bold;
   font-size: 16px;
   margin-right: 20px;
+  margin-left: auto;
 }
 
 .comments {
